# TestU_Framework

./: .gitignore
UNITY/src/: CMakeLists.txt  main.c
UNITY/src/calculate/: operator.c  operator.h
UNITY/tests/: CMakeLists.txt  main_test.c
UNITY/tests/test_operator/: test_operator.c  test_operator.h
